...

                <TextView
                    android:id="@+id/firstPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/firstPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/secondPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/secondPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/thirdPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/thirdPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/fourthPlayer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/player1nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/player1lost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/player1won"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/player2nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/player2lost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/player2won"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/player3nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/player3ScoreScoreTaking"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/player3lost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <CheckBox
                            android:id="@+id/player3won"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/player4nameScoreTaking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                <!-- Save score Button -->
                <Button
                    android:id="@+id/saveScores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
